# django-admin-contexts

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml  gh-pages.yml
contributing/: index.html
django_admin_contexts/: admin.py  apps.py  forms.py  models.py
django_admin_contexts/migrations/: 0001_initial.py
django_admin_contexts/templates/admin/: app_list.html
django_admin_contexts/templatetags/: django_admin_contexts_tags.py
docs/: contributing.md  index.md  license.md
example_project/: db.sqlite3
example_project/ecommerce/: admin.py  models.py
example_project/ecommerce/migrations/: 0001_initial.py
example_project/example_project/: settings.py  urls.py
license/: index.html
search/: search_index.json
tests/: settings.py
