[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-admin-contexts"
dynamic = ["version"]
description = "Contexts for Django Admin homepage"
readme = "README.md"
license = "BSD-3-clause"
authors = [
    { name = "Matias Agustin Mendez", email = "matagus@gmail.com" },
]
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.9"
dependencies = [
    "Django>=4.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "django-extensions",
    "Werkzeug",
    "django-debug-toolbar",
]

[project.urls]
Homepage = "https://github.com/matagus/django-admin-contexts"
Issues = "https://.github.com/matagus/django-admin-contexts/issues"
Repository = "https://github.com/matagus/django-admin-contexts"
Changelog = "https://githib.com/matagus/django-admin-contexts/releases"
Pypi = "https://pypi.org/project/django-admin-contexts"

[tool.hatch.version]
path = "django_admin_contexts/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "django_admin_contexts/",
]

[tool.hatch.build.targets.wheel]
include = [
    "django_admin_contexts/",
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.project]
template = "default"
extra-dependencies = [
  "django-taggit", "django-waffle", "django-guardian", "django-organizations", "django-helpdesk",
  "django-user-accounts", "pinax", "django-payments", "easy-thumbnails", "django-activity-stream",
]

[tool.hatch.envs.project.scripts]
runserver = "python example_project/manage.py runserver_plus {args}"
shell = "python example_project/manage.py shell_plus {args}"
migrate = "python example_project/manage.py migrate {args}"
makemigrations = "python example_project/manage.py makemigrations {args}"
createsuperuser = "python example_project/manage.py createsuperuser {args}"

# Test environment
[[tool.hatch.envs.test.matrix]]
django = ["4.0"]
python = ["3.9", "3.10"]

[[tool.hatch.envs.test.matrix]]
django = ["4.1"]
python = ["3.9", "3.10", "3.11"]

[[tool.hatch.envs.test.matrix]]
django = ["4.2"]
python = ["3.9", "3.10", "3.11", "3.12"]

[[tool.hatch.envs.test.matrix]]
django = ["5.0"]
python = ["3.10", "3.11", "3.12"]

[tool.hatch.envs.test]
dependencies = ["coverage[toml]", "django~={matrix:django}.0"]

[tool.hatch.envs.test.scripts]
test = "python -m django test --settings tests.settings"
test-cov = "coverage run -m django test --settings tests.settings"
cov-report = ["coverage json", "coverage report"]
cov = ["test-cov", "cov-report"]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
